# test4

./: .gitignore  CMakeLists.txt  Test4Config.h.in
include/: board.h  socket.h
src/: CMakeLists.txt  judge.cpp  player.cpp  socket.cpp
